--- a/src/main/java/dashboard/gui/DashboardPanel.form
+++ b/src/main/java/dashboard/gui/DashboardPanel.form
@@ -233,6 +233,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Update"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="onUpdate"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel9">
             </Component>
