--- a/src/main/java/explorer/gui/ExplorerAddTestcaseDlg.form
+++ b/src/main/java/explorer/gui/ExplorerAddTestcaseDlg.form
@@ -63,6 +63,9 @@
               <Font name="Tahoma" size="18" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="onEnter"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
