Final Adaptations and testing

--- a/src/main/java/dashboard/gui/DashboardPanel.form
+++ b/src/main/java/dashboard/gui/DashboardPanel.form
@@ -93,7 +93,7 @@
                 </Property>
               </Properties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;NutzerNew&gt;"/>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;dashboard.beans.Nutzer&gt;"/>
               </AuxValues>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel2">
